2006-11-15  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpbrush.c (gimp_brush_real_scale_pixmap): use
	brush_scale_pixmap(), not brush_scale_mask().

2006-11-15  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/FractalExplorer/FractalExplorer.h
	* plug-ins/FractalExplorer/FractalExplorer.c (explorer_render_row):
	Removed 'static' from the routines declaration. Changed routine to
	use a switch instead of a series of if statements.

	* plug-ins/FractalExplorer/Dialogs.c: Removed duplicate code by
	using call to explorer_render_row().

2006-11-15  Simon Budig  <simon@gimp.org>

	* plug-ins/common/tiff.c: adapt the special casing for libtiff
	warning messages about unknown tags for the apparently newer
	message text.

2006-11-14  Simon Budig  <simon@gimp.org>

	* plug-ins/common/tiff.c: Import paths embedded into the
	PHOTOSHOP-tag. Please test!

2006-11-15  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/FractalExplorer/FractalExplorer.c
	* plug-ins/FractalExplorer/Dialogs.c: Fixed bug #372671 and made
	loglog smoothing work again.

2006-11-14  Simon Budig  <simon@gimp.org>

	* plug-ins/script-fu/scripts/grid-system.scm: don't register in the
	menus. The script duplicates functionality of the better plugin,
	has a very obscure UI and registers under the same name as the plugin.

2006-11-14  Sven Neumann  <sven@gimp.org>

	* app/dialogs/file-open-location-dialog.c: don't use
	gimp_dialog_set_sensitive(); just make the entry not editable and
	the dialog's OK button insensitive.
	
	* app/widgets/gimpfiledialog.c
	* app/widgets/gimpwidgets-utils.[ch]: moved gimp_dialog_set_sensitive()
	implementation into gimp_file_dialog_set_sensitive().

2006-11-13  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangletool.c: reduced the size of the side
	handles to two third the size of the corner handles.

2006-11-13  Michael Natterer  <mitch@gimp.org>

	* app/xcf/xcf.c (xcf_load_invoker): fix g_str_has_prefix() change